// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsersForm /> renders create user 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        disabled={false}
        id="frm-users-role-id"
        label="Tenant Role *"
        name="roleId"
        options={Array []}
        required={true}
      />
      <ToggleField
        disabled={false}
        id="frm-users-invite-now"
        label="Invite Now"
        name="inviteNow"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-email"
        inputType="text"
        label="Email *"
        name="email"
      />
      <SelectField
        disabled={false}
        id="frm-users-platform-role-id"
        label="Platform Role *"
        name="platformRoleId"
        options={Array []}
        required={true}
      />
      <SelectField
        disabled={false}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Use Tenant Default: Enabled",
              "value": "null",
            },
            Object {
              "label": "Enabled",
              "value": true,
            },
            Object {
              "label": "Disabled",
              "value": false,
            },
          ]
        }
        required={true}
      />
      <SelectField
        disabled={false}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders create user saving and inherited 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        disabled={true}
        id="frm-users-role-id"
        label="Tenant Role *"
        name="roleId"
        options={Array []}
        required={true}
      />
      <ToggleField
        disabled={true}
        id="frm-users-invite-now"
        label="Invite Now"
        name="inviteNow"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-email"
        inputType="text"
        label="Email *"
        name="email"
      />
      <SelectField
        disabled={true}
        id="frm-users-platform-role-id"
        label="Platform Role *"
        name="platformRoleId"
        options={Array []}
        required={true}
      />
      <SelectField
        disabled={true}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Use Tenant Default: Enabled",
              "value": "null",
            },
            Object {
              "label": "Enabled",
              "value": true,
            },
            Object {
              "label": "Disabled",
              "value": false,
            },
          ]
        }
        required={true}
      />
      <SelectField
        disabled={true}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders create user without create permision 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        componentType="input"
        disabled={true}
        id="frm-users-work-station-id"
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        disabled={true}
        id="frm-users-role-id"
        label="Tenant Role *"
        name="roleId"
        options={Array []}
        required={true}
      />
      <ToggleField
        disabled={true}
        id="frm-users-invite-now"
        label="Invite Now"
        name="inviteNow"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        componentType="input"
        disabled={false}
        id="frm-users-email"
        inputType="text"
        label="Email *"
        name="email"
      />
      <SelectField
        disabled={true}
        id="frm-users-platform-role-id"
        label="Platform Role *"
        name="platformRoleId"
        options={Array []}
        required={true}
      />
      <SelectField
        disabled={true}
        id="frm-users-no-password-id"
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Use Tenant Default: Enabled",
              "value": "null",
            },
            Object {
              "label": "Enabled",
              "value": true,
            },
            Object {
              "label": "Disabled",
              "value": false,
            },
          ]
        }
        required={true}
      />
      <SelectField
        disabled={true}
        id="frm-users-default-identity-provider-id"
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;
